--- a/src/components/Slide/Slide.scss
+++ b/src/components/Slide/Slide.scss
@@ -14,16 +14,19 @@
   .slide {
     display: flex;
     @include border-carousel;
-    width: 100%;
     height: 320px;
     position: relative;
+    transition: transform 0.6s cubic-bezier(0.25, 0.8, 0.25, 1), opacity 0.6s ease-in-out;
+    // opacity: 0; // Initialement transparent
 
     @media only screen and (max-width : 768px) {
       flex-direction: column-reverse;
       height: auto;
     }
+    .slide-next{
+      animation: 3s ease-in 1s infinite reverse both running slidein;
   }
-
+  }
   
   .icon-link{
     display: flex;
