--- a/src/index.scss
+++ b/src/index.scss
@@ -28,3 +28,131 @@ html, body {
       margin-left: 60px;
       }
 }
+
+//////////////HEADER///////////////////
+.header {
+  position: fixed;
+  gap: 18%;
+  top: 0;
+  left: 0;
+  width: 80px;
+  height: 100vh;
+  background-color: $light-black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 0;
+  z-index: 100;
+
+    @media only screen and (max-width : 550px) {
+      width: 60px;
+      }
+
+  h1 {
+    font-size: 3em;
+    background: $gradient-accent;
+    -webkit-background-clip: text; // Pour les navigateurs Webkit
+    background-clip: text;
+    color: transparent; // Rendre le texte transparent pour laisser voir le dégradé
+  }
+
+  .header-links {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 60px; 
+
+        @media only screen and (max-width : 550px) {
+          gap: 2em;
+          }
+
+      li {
+        .icon {
+          color: $white;
+          font-size: 1.5rem; 
+          transition: color 0.3s, transform 0.3s;
+
+          &:hover {
+            color: $electric-blue;
+            transform: scale(1.1); // Zoom plus prononcé au survol
+          }
+        }
+      }
+    }
+  }
+  .header-links-social {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px; // Espacement plus large entre les icônes
+
+      li {
+        .icon {
+          color: $white;
+          font-size: 1.3rem; 
+          transition: color 0.3s, transform 0.3s;
+
+          &:hover {
+            color: $electric-blue;
+            transform: scale(1.2); // Zoom plus prononcé au survol
+          }
+        }
+      }
+    }
+  }
+}
+///////////////////////////////////////////////////////
+
+footer {
+  background-color: $dark-black;
+  color: $white;
+  text-align: center;
+  margin-top: auto; 
+  padding-bottom: 20px;
+  
+
+  p {
+    margin: 0;
+    @include responsive-text(0.7em, 0.8rem, 0.9rem);
+  }
+
+  .footer-links {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    padding: 0;
+    margin: 10px 0 0;
+
+    li a {
+      color: $white;
+      text-decoration: none;
+      transition: color 0.3s;
+      @include responsive-text(0.9em, 1.0rem, 1.2rem);
+
+      &:hover {
+        color: $electric-blue;
+      }
+    }
+  }
+}
